--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -95,3 +95,13 @@
 "최고속도\n25 km/h 초과" = "최고속도\n25 km/h 초과";
 "설정에서 '정확한 위치'를 허용하면 보다 정확한 데이터를 얻을 수 있어요." = "설정에서 '정확한 위치'를 허용하면 보다 정확한 데이터를 얻을 수 있어요.";
 "파워" = "파워";
+
+// [watch] StartView
+"need_health_authorization" = "건강 액세스 권한 필요";
+"need_location_authorization" = "위치 엑세스 권한 필요";
+"inform_need_health" = "원활한 앱 사용을 위해 iPhone을 사용하여 SoccerBeat에서 건강 정보에 엑세스하도록 허용합니다. 설정 > 개인정보 보호 및 보안 > 건강 > SoccerBeat로 이동하세요. 건강 권한을 모두 활성화를 마친 후, SoccerBeat로 돌아가 시작을 누르고 경기를 시작하세요.";
+"inform_need_location" = "원활한 앱 사용을 위해 SoccerBeat가 Apple Watch에서 위치 정보에 액세스해야 합니다. 위치 정보 액세스를 활성화하려면 iPhone에서 설정 > 개인정보 보호 및 보안 > 위치 서비스 > SoccerBeat로 이동하세요. 활성화를 마친 후, SoccerBeat로 돌아가 시작을 누르고 경기를 시작하세요.";
+"close" = "닫기";
+
+
+
