--- a/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
@@ -102,3 +102,8 @@
 "inform_need_health" = "For optimal app usage, please allow SoccerBeat to access health information using your iPhone. Go to Settings > Privacy & Security > Health > SoccerBeat. After enabling all health permissions, return to SoccerBeat, press Start, and begin the game.";
 "inform_need_location" = "For optimal app usage, SoccerBeat needs to access location information from your Apple Watch. To enable location access, go to Settings > Privacy & Security > Location Services > SoccerBeat on your iPhone. After enabling it, return to SoccerBeat, press Start, and begin the game.";
 "close" = "close";
+
+// 데이터 오류
+"데이터에 오류가 발생했습니다. " = "Error occurred in this data. ";
+"건강 및 위치 권한을 재확인하거나" = "Please re-check your health and location permissions";
+"삭제 및 재설치를 권장드립니다." = "or delete and reinstall the application.";
