--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -103,5 +103,8 @@
 "inform_need_location" = "원활한 앱 사용을 위해 SoccerBeat가 Apple Watch에서 위치 정보에 액세스해야 합니다. 위치 정보 액세스를 활성화하려면 iPhone에서 설정 > 개인정보 보호 및 보안 > 위치 서비스 > SoccerBeat로 이동하세요. 활성화를 마친 후, SoccerBeat로 돌아가 시작을 누르고 경기를 시작하세요.";
 "close" = "닫기";
 
-
+// 데이터 오류
+"데이터에 오류가 발생했습니다. " = "데이터에 오류가 발생했습니다. ";
+"건강 및 위치 권한을 재확인하거나" = "건강 및 위치 권한을 재확인하거나";
+"삭제 및 재설치를 권장드립니다." = "삭제 및 재설치를 권장드립니다.";
 
