--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -103,5 +103,6 @@
 "inform_need_location" = "원활한 앱 사용을 위해 SoccerBeat가 Apple Watch에서 위치 정보에 액세스해야 합니다. 위치 정보 액세스를 활성화하려면 iPhone에서 설정 > 개인정보 보호 및 보안 > 위치 서비스 > SoccerBeat로 이동하세요. 활성화를 마친 후, SoccerBeat로 돌아가 시작을 누르고 경기를 시작하세요.";
 "close" = "닫기";
 
-
-
+// [iphone]
+"workout_empty" = "현재 기록된 경기가 없습니다.";
+"try_game_in_watch" = "애플워치에서 사커비트를 켜서 첫 경기를 기록하세요!";
