--- a/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
@@ -102,3 +102,7 @@
 "inform_need_health" = "为了优化应用程序的使用，请允许 SoccerBeat 使用您的 iPhone 访问健康信息。请前往 设置 > 隐私与安全 > 健康 > SoccerBeat。在启用所有健康权限后，返回 SoccerBeat，按下开始并开始比赛。";
 "inform_need_location" = "为了优化应用程序的使用，SoccerBeat 需要访问您的 Apple Watch 上的位置信息。要启用位置访问，请在 iPhone 上前往 设置 > 隐私与安全 > 位置服务 > SoccerBeat。启用后，返回 SoccerBeat，按下开始并开始比赛。";
 "close" = "關閉";
+
+// [iphone]
+"workout_empty" = "目前没有记录的比赛。";
+"try_game_in_watch" = "在您的 Apple Watch 上打开 SoccerBeat 以记录您的第一场比赛！";
