--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -93,7 +93,7 @@
 "최고속도\n15 km/h 초과" = "최고속도\n15 km/h 초과";
 "최고속도\n20 km/h 초과" = "최고속도\n20 km/h 초과";
 "최고속도\n25 km/h 초과" = "최고속도\n25 km/h 초과";
-"설정에서 '정확한 위치'를 허용하면 보다 정확한 데이터를 얻을 수 있어요." = "설정에서 '정확한 위치'를 허용하면 보다 정확한 데이터를 얻을 수 있어요.";
+"슬라이더를 움직여 경기 중 위치를 확인해보세요." = "슬라이더를 움직여 경기 중 위치를 확인해보세요.";
 "파워" = "파워";
 
 // [watch] StartView
