--- a/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
@@ -93,7 +93,7 @@
 "최고속도\n15 km/h 초과" = "最高速度\n超过15km/h";
 "최고속도\n20 km/h 초과" = "最高速度\n超过20km/h";
 "최고속도\n25 km/h 초과" = "最高速度\n超过25km/h";
-"설정에서 '정확한 위치'를 허용하면 보다 정확한 데이터를 얻을 수 있어요." = "在设置中允许'精确位置'可以获得更准确的数据。";
+"슬라이더를 움직여 경기 중 위치를 확인해보세요." = "移动滑块来显示比赛中的位置。";
 "파워" = "力量";
 
 // [watch] StartView
