feat: [#364] Emptydata Alert Localzation Added

--- a/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
@@ -12,7 +12,9 @@
 "경기 중 나의 위치를 확인해 보세요." = "Check your position during the game.";
 "최근 경기" = "Recent Game";
 "저장된 경기 기록이 없습니다." = "No saved game history.";
-"애플워치를 차고 당신의 첫 번째 경기를 기록해 보세요!" = "Wear the Apple Watch and record your first game!";
+"애플워치를 차고 사커비트로" = "Record your first game with Soccerbeat";
+"당신의 첫 번째 경기를 기록해 보세요!" = "while wearing an Apple Watch!";
+"애플워치를 차고 사커비트로 당신의 첫 번째 경기를 기록해 보세요!" = "Record your first game with Soccerbeat while wearing an Apple Watch!";
 "추세" = "Trend";
 "나의 선수 카드와 최대 능력치를 만나보세요." = "Meet your player card and maximum ability.";
 "파란색" = "Color Blue";
