--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -104,8 +104,10 @@
 "close" = "닫기";
 
 // [iphone]
-"workout_empty" = "현재 기록된 경기가 없습니다.";
-"try_game_in_watch" = "애플워치에서 사커비트를 켜서 첫 경기를 기록하세요!";
+"workout_empty" = "저장된 경기 기록이 없습니다.";
+"try_game" = "애플워치를 차고 사커비트로";
+"in_watch" = "당신의 첫 번째 경기를 기록해 보세요!";
+"try_game_in_watch" = "애플워치를 차고 사커비트로 당신의 첫 번째 경기를 기록해 보세요!";
 
 // 데이터 오류
 "데이터에 오류가 발생했습니다. " = "데이터에 오류가 발생했습니다. ";
