--- a/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
@@ -12,7 +12,9 @@
 "경기 중 나의 위치를 확인해 보세요." = "看一看比赛中的位置。";
 "최근 경기" = "最近比赛";
 "저장된 경기 기록이 없습니다." = "没有保存的比赛记录。";
-"애플워치를 차고 당신의 첫 번째 경기를 기록해 보세요!" = "戴上Apple Watch，记录你的第一场比赛！";
+"애플워치를 차고 사커비트로" = "戴上Apple Watch";
+"당신의 첫 번째 경기를 기록해 보세요!" = "记录你的第一场比赛！";
+"애플워치를 차고 사커비트로 당신의 첫 번째 경기를 기록해 보세요!" = "戴上Apple Watch，记录你的第一场比赛！";
 "추세" = "趋势";
 "나의 선수 카드와 최대 능력치를 만나보세요." = "看看我的选手卡和最大能力值。";
 "파란색" = "蓝色";
