feat: [#373] 로컬라이제이션 수정 및 추가

--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -108,6 +108,8 @@
 "try_game" = "애플워치를 차고 사커비트로";
 "in_watch" = "당신의 첫 번째 경기를 기록해 보세요!";
 "try_game_in_watch" = "애플워치를 차고 사커비트로 당신의 첫 번째 경기를 기록해 보세요!";
+"time" = "회";
+"times" = "회";
 
 // 데이터 오류
 "데이터에 오류가 발생했습니다. " = "데이터에 오류가 발생했습니다. ";
