--- a/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
@@ -95,7 +95,7 @@
 "최고속도\n15 km/h 초과" = "Maximum speed\nOver 15 km/h";
 "최고속도\n20 km/h 초과" = "Maximum speed\nOver 20 km/h";
 "최고속도\n25 km/h 초과" = "Maximum speed\nOver 25 km/h";
-"슬라이더를 움직여 경기 중 위치를 확인해보세요." = "Move Slider to check out your position during the match.";
+"슬라이더를 움직여 경기 중 위치를 확인해보세요." = "Move Slider to check out your position.";
 "파워" = "Power";
 
 // [watch] StartView
@@ -108,6 +108,8 @@
 // [iphone]
 "workout_empty" = "There are no recorded games currently.";
 "try_game_in_watch" = "Turn on SoccerBeat on your Apple Watch to record your first game!";
+"time" = "time";
+"times" = "times";
 
 // 데이터 오류
 "데이터에 오류가 발생했습니다. " = "Error occurred in this data. ";
