--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -93,6 +93,9 @@
 "최고속도\n25 km/h 초과" = "최고속도\n25 km/h 초과";
 "슬라이더를 움직여 경기 중 위치를 확인해보세요." = "슬라이더를 움직여 경기 중 위치를 확인해보세요.";
 "파워" = "파워";
+"🏆 Level Up! ⚽️🏃‍♂️\n\n사커비트가 유저분들의 의견을 반영하여 사용성을 개선했어요\n\n지금 바로 업데이트하고 즐겨보세요!" = "🏆 Level Up! ⚽️🏃‍♂️\n\n사커비트가 유저분들의 의견을 반영하여 사용성을 개선했어요\n\n지금 바로 업데이트하고 즐겨보세요!";
+"업데이트" = "업데이트";
+"나중에" = "나중에";
 
 // [watch] StartView
 "need_health_authorization" = "건강 액세스 권한 필요";
