--- a/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
@@ -95,6 +95,9 @@
 "최고속도\n25 km/h 초과" = "最高速度\n超过25km/h";
 "슬라이더를 움직여 경기 중 위치를 확인해보세요." = "移动滑块来显示比赛中的位置。";
 "파워" = "力量";
+"🏆 Level Up! ⚽️🏃‍♂️\n\n사커비트가 유저분들의 의견을 반영하여 사용성을 개선했어요\n\n지금 바로 업데이트하고 즐겨보세요!" = "🏆 Level Up! ⚽️🏃‍♂️\n\nSoccerBeat 反映用户的意见，改善了使用经验。\n\n现在立即更新并享受崭新的SOCCERBEAT吧！";
+"업데이트" = "更新";
+"나중에" = "稍后更新";
 
 // [watch] StartView
 "need_health_authorization" = "请设置健康信息权限";
