--- a/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/en.lproj/Localizable.strings
@@ -113,3 +113,9 @@
 "데이터에 오류가 발생했습니다. " = "Error occurred in this data. ";
 "건강 및 위치 권한을 재확인하거나" = "Please re-check your health and location permissions";
 "삭제 및 재설치를 권장드립니다." = "or delete and reinstall the application.";
+
+// Trends Average View
+"%@의 최고 속도는 %@km/h입니다." = "The top speed of %@ is %@km/h.";
+"%@의 평균 활동량은 %@km입니다." = "Average distance per 90min in %@ is %@km.";
+"%@의 결승골 득점시 심박수는 %@입니다." = "%@'s heart rate was %@ when he scored the winning goal.";
+"%@의 평균 스프린트 횟수는 %@입니다." = "The average number of sprints for %@ is %@.";
