--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -113,3 +113,9 @@
 "데이터에 오류가 발생했습니다. " = "데이터에 오류가 발생했습니다. ";
 "건강 및 위치 권한을 재확인하거나" = "건강 및 위치 권한을 재확인하거나";
 "삭제 및 재설치를 권장드립니다." = "삭제 및 재설치를 권장드립니다.";
+
+// Trends Average View
+"%@의 최고 속도는 %@km/h입니다." = "%@의 최고 속도는 %@km/h입니다.";
+"%@의 평균 활동량은 %@km입니다." = "%@의 평균 활동량은 %@km입니다.";
+"%@의 결승골 득점시 심박수는 %@입니다." = "%@의 결승골 득점시 심박수는 %@입니다.";
+"%@의 평균 스프린트 횟수는 %@입니다." = "%@의 평균 스프린트 횟수는 %@입니다.";
