--- a/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
@@ -114,3 +114,9 @@
 "데이터에 오류가 발생했습니다. " = "信息记录发生异常";
 "건강 및 위치 권한을 재확인하거나" = "请在设置检查健康及位置信息权限";
 "삭제 및 재설치를 권장드립니다." = "或删除及重新下载软件";
+
+// Trends Average View
+"%@의 최고 속도는 %@km/h입니다." = "%@的平均冲刺次数为%@.";
+"%@의 평균 활동량은 %@km입니다." = "%@每 90 分钟的平均距离为 %@公里.";
+"%@의 결승골 득점시 심박수는 %@입니다." = "当%@打进制胜一球时 他的心率是%@";
+"%@의 평균 스프린트 횟수는 %@입니다." = "%@的平均冲刺次数为%@.";
