feat: [#394] Title Text Localization

--- a/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/ko.lproj/Localizable.strings
@@ -122,3 +122,5 @@
 "%@의 평균 활동량은 %@km입니다." = "%@의 평균 활동량은 %@km입니다.";
 "%@의 결승골 득점시 심박수는 %@입니다." = "%@의 결승골 득점시 심박수는 %@입니다.";
 "%@의 평균 스프린트 횟수는 %@입니다." = "%@의 평균 스프린트 횟수는 %@입니다.";
+
+"Heart Beat" = "Heart Beat";
