--- a/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
+++ b/SoccerBeat/SoccerBeat/zh-Hans.lproj/Localizable.strings
@@ -123,3 +123,5 @@
 "%@의 평균 활동량은 %@km입니다." = "%@每 90 分钟的平均距离为 %@公里.";
 "%@의 결승골 득점시 심박수는 %@입니다." = "当%@打进制胜一球时 他的心率是%@";
 "%@의 평균 스프린트 횟수는 %@입니다." = "%@的平均冲刺次数为%@.";
+
+"Heart Beat" = "Heart Beat";
