feat: 베이스 파일 영어에서 한국어로 변경, 로컬라이저 파일 삭제

--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -1,5 +1,5 @@
 {
-  "sourceLanguage" : "en",
+  "sourceLanguage" : "ko",
   "strings" : {
     "%@의 결승골 득점시 심박수는 %@입니다." : {
       "comment" : "결승골 심박수 명언",
