fix: 스페인어 칸에 중국어 있는 오류 수정

--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -1482,7 +1482,7 @@
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "打开 Apple Watch 上的 SoccerBeat，开始第一场比赛！"
+            "value" : "Activa SoccerBeat en tu Apple Watch para empezar tu primer partido."
           }
         },
         "ko" : {
