--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -94,13 +94,19 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "kcal"
+            "value" : " kcal"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : " kcal"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "kcal"
+            "value" : " kcal"
           }
         }
       }
@@ -220,13 +226,19 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "VO2"
+            "value" : " VO2"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : " VO2"
           }
         },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "VO2"
+            "value" : " VO2"
           }
         }
       }
@@ -236,7 +248,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : " w"
+            "value" : "bmp"
           }
         },
         "es" : {
@@ -258,7 +270,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : " 회"
+            "value" : " times"
           }
         },
         "es" : {
@@ -582,7 +594,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "> 개인 정보 보호 및 보안\n> 건강\n> SoccerBeat > 모두켜기\n 순서로 설정해주세요."
+            "value" : "Please follow these steps to set it up:\n> Privacy & Security\n> Health\n> SoccerBeat > Turn On All"
           }
         },
         "es" : {
@@ -610,7 +622,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "> 개인 정보 보호 및 보안\n> 위치\n> SoccerBeat > 모두켜기\n 순서로 설정해주세요."
+            "value" : "Please follow these steps to set it up:\n> Privacy & Security\n> Health\n> SoccerBeat > Turn On All"
           }
         },
         "es" : {
@@ -638,7 +650,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "🏆 Level Up! ⚽️🏃‍♂️\n\n사커비트가 유저분들의 의견을 반영하여 사용성을 개선했어요\n\n지금 바로 업데이트하고 즐겨보세요!"
+            "value" : "🏆 Level Up! ⚽️🏃‍♂️\n\nSoccerBeat has improved usability based on user feedback.\n\nUpdate now and enjoy the new experience!"
           }
         },
         "es" : {
@@ -1336,7 +1348,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "%@ 플레이어, "
+            "value" : "Player %@,"
           }
         },
         "es" : {
@@ -1790,7 +1802,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "건강 (필수)"
+            "value" : "Health (Required)"
           }
         },
         "es" : {
@@ -1812,7 +1824,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "건강 권한 설정하기"
+            "value" : "Set Health Permissions"
           }
         },
         "es" : {
@@ -2246,7 +2258,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "단계별 설정 방법"
+            "value" : "Step-by-Step Setup Instructions"
           }
         },
         "es" : {
@@ -2328,7 +2340,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "데이터에 오류가 발생했습니다. "
+            "value" : "Error occurred in this data."
           }
         },
         "es" : {
@@ -2410,7 +2422,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "뛴거리 및 속도 측정에 사용"
+            "value" : "Used for measuring distance and speed"
           }
         },
         "es" : {
@@ -2674,7 +2686,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : " Agility"
+            "value" : "Agility"
           }
         },
         "es" : {
@@ -2732,7 +2744,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "불편을 드려 죄송합니다. \n\nSoccerBeat의 개발자 계정으로 문의를 주시면 빠른 시일 안에 답변드리겠습니다. "
+            "value" : "We apologize for the inconvenience.\n\nIf you contact the developer account of SoccerBeat, we will respond to you as soon as possible."
           }
         },
         "es" : {
@@ -2874,7 +2886,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "설정하기"
+            "value" : "Set up"
           }
         },
         "es" : {
@@ -2926,7 +2938,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "스프린트 및 경기장 위치 조회에 사용"
+            "value" : "Used for viewing sprint and stadium locations"
           }
         },
         "es" : {
@@ -3420,7 +3432,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "위치 권한 설정하기"
+            "value" : "Set Location Permissions"
           }
         },
         "es" : {
