--- a/SoccerBeat/Common/Resource/Localizable.xcstrings
+++ b/SoccerBeat/Common/Resource/Localizable.xcstrings
@@ -739,6 +739,12 @@
             "value" : "Bpm"
           }
         },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bpm"
+          }
+        },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
@@ -750,6 +756,12 @@
     "BPM" : {
       "localizations" : {
         "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "BPM"
+          }
+        },
+        "es" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "BPM"
@@ -873,22 +885,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "实地记录"
-          }
-        }
-      }
-    },
-    "Heart Beat" : {
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Heart Beat"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "心跳声"
           }
         }
       }
@@ -1537,6 +1533,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Time"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tiempo"
           }
         },
         "zh-Hans" : {
@@ -4439,6 +4441,12 @@
             "value" : "Maximal Oxygen Consumption"
           }
         },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Consumo máximo de oxígeno"
+          }
+        },
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "translated",
@@ -4685,6 +4693,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "calorie"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Caloría"
           }
         },
         "zh-Hans" : {
